--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -55,6 +55,12 @@
     <label for="name">Full Name *</label>
     <input type="text" id="name" name="name" required>
 
+    <label for="name">Email *</label>
+    <input type="text" id="email" name="email" required>
+
+    <label for="name">Phone number *</label>
+    <input type="tel" id="phone" name="phone" required>
+
     <label for="gender">Gender *</label>
     <select id="gender" name="gender" required>
       <option value="">--Select--</option>
